this is developerC commit

--- a/master.html
+++ b/master.html
@@ -5,3 +5,8 @@ this is master commit in file
 this is developer1 line
 
 this is developer commit in file
+
+
+this is dev c line
+
+this is developer c commit in file
